--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,11 @@
     width: 50%;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
+.coach-badge.status-avialable
+{
+    background: #c8e6c9;
+    color: #256029;
+}
 /* end Coaches component in landing page */
 
 
