--- a/src/App.css
+++ b/src/App.css
@@ -122,10 +122,8 @@
     margin-left: 10px;
 
     height: 100%;
+    max-width: 100%;
 
-    /* height: 80%; */
-
-    width: 50%;
 }
 
 
@@ -143,13 +141,16 @@
     margin: .3rem;
     text-align: center;
     padding: 2rem 0;
-    width: 250px;
+    width: 275px;
+    height: 400px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 .carousel-demo .coach-item .coach-image {
     width: 50%;
     border-radius: 50%;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    
 }
 
 .coach-badge.status-avialable {
