--- a/src/css/listOfCoaches.css
+++ b/src/css/listOfCoaches.css
@@ -1,30 +1,46 @@
-.cardbox
-{
-    width: 400px;
-    margin-top: 100px;
-    margin-left: 70px;
-    height: 400px;
-
-}
-
-.coachImg
-{
-    height: 150px;
-    width: 150px;
-
-}
-.coachcard
-{
-    display: flex;
-   
-}
-.CoachRatings{
-    float: right;
-    margin-right: 15px;
-}
-
-.CoachesContainer
-{
+.CoachesContainer {
+    padding-top: 100px;
     display: flex;
     flex-wrap: wrap;
+    /* height: 200vh; */
+}
+
+.cardbox {
+    position: relative;
+    max-width: 300px;
+    min-width: 200px;
+    /* height: 400px; */
+    overflow: auto;
+    box-shadow: 0px 0px 10px 4px rgba(80, 80, 80, 0.73) !important;
+    z-index: -2;
+    margin-bottom: 20px;
+    /* margin: 10px; */
+}
+
+.coverImage {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: -1;
+    height: 80px;
+}
+
+.coachImageDiv {
+    border-radius: 50%;
+    background-color: azure;
+    height: 75px;
+    width: 75px;
+}
+
+.coachCardFooter {
+    font-weight: bold;
+}
+
+.coachCardAbout {
+    font-size: 12px;
+}
+
+.coachCardRating {
+    display: flex;
 }
