--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 @import "primeicons/primeicons.css";
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700');
 @import url('https://fonts.googleapis.com/css?family=Catamaran:400,800');
+@import 'components/clinetSignup.css';
 #root {
     /* background-color: lightgray; */
     --main-color: rgb(129, 207, 223);
