--- a/src/App.css
+++ b/src/App.css
@@ -80,9 +80,9 @@
 
 .navbar-custom {
     animation-name: addColor;
-    animation-duration: 0.5s;
+    animation-duration: .5s;
     background: var(--main-color);
-    box-shadow: 0px 10px 12px -3px rgba(0, 0, 0, 0.79);
+    box-shadow: 0px 10px 7px -10px rgba(0, 0, 0, 0.79);
 }
 
 
