--- a/src/css/listOfCoaches.css
+++ b/src/css/listOfCoaches.css
@@ -1,20 +1,26 @@
+.ListOfCoaches-page {
+    background-color: aliceblue;
+}
+
 .CoachesContainer {
-    padding-top: 100px;
+    padding-top: 159px;
     display: flex;
     flex-wrap: wrap;
     /* height: 200vh; */
+    z-index: 2;
 }
 
 .cardbox {
     position: relative;
     max-width: 300px;
     min-width: 200px;
-    /* height: 400px; */
+    height: 400px;
     overflow: auto;
     box-shadow: 0px 0px 10px 4px rgba(80, 80, 80, 0.73) !important;
-    z-index: -2;
+    z-index: 2;
     margin-bottom: 20px;
     /* margin: 10px; */
+    border-radius: 20px !important;
 }
 
 .coverImage {
@@ -22,7 +28,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    z-index: -1;
+    /* z-index: 1; */
     height: 80px;
 }
 
@@ -31,6 +37,7 @@
     background-color: azure;
     height: 75px;
     width: 75px;
+    z-index: 1;
 }
 
 .coachCardFooter {
@@ -43,4 +50,26 @@
 
 .coachCardRating {
     display: flex;
+}
+
+.coachCardContextMenu {
+    position: absolute !important;
+    /* width: 100%; */
+    top: 0 !important;
+    right: 5% !important;
+    z-index: 3;
+}
+
+.coachCardContextMenu .threedots {
+    color: white;
+    font-size: 30px;
+}
+
+.textdiv {
+    margin-top: 59px;
+    position: fixed;
+    width: 100%;
+    background-color: white;
+    box-shadow: 0px 10px 5px -10px rgba(0, 0, 0, 0.5);
+    z-index: 3;
 }
