--- a/src/components/coachsignup/coachstyle.css
+++ b/src/components/coachsignup/coachstyle.css
@@ -30,6 +30,7 @@
     position: relative;
     width: 100%;
     min-height: 100vh;
+    align-items: center ;
     display: flex;
 }
 
@@ -46,15 +47,15 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(225deg, var(--main-color), #0f4f94);
+    /* background: linear-gradient(225deg, var(--main-color), #000000); */
     z-index: 1;
     mix-blend-mode: screen;
 }
 
 .coachSignupContainer .imgbg img {
-    position: absolute;
-    top: 0;
-    left: 0;
+    /* position: absolute; */
+    /* top: 0; */
+    /* left: 0; */
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -66,7 +67,7 @@
     align-items: center;
     width: 50%;
     /* height: 100%; */
-    background-color: red;
+    /* background-color: red; */
 }
 
 .coachSignupContainer .cont .formB {
@@ -74,7 +75,7 @@
     height: 100%;
     /* margin to avoid navbar */
     margin-top: 100px;
-    background-color: blue;
+    /* background-color: blue; */
 }
 
 .coachSignupContainer .cont .formB h2 {
@@ -146,25 +147,25 @@
 }
 
 
-/* .coachSignupContainer .cont .formB h3 {
+.coachSignupContainer .cont .formB h3 {
     color: #607d8b;
     text-align: center;
     margin: 80px 0 10px;
     font-weight: 500;
-} */
+}
 
 
-/* .coachSignupContainer .cont .formB .somed {
+.coachSignupContainer .cont .formB .somed {
     display: flex;
     justify-content: center;
     align-items: center;
-} */
+}
 
 
-/* .coachSignupContainer .cont .formB .somed li:hover {
+/* /* .coachSignupContainer .cont .formB .somed li:hover {
     background: var(--main-color);
     transform: scale(1.5);
-}
+} */
 
 .coachSignupContainer .cont .formB .somed li {
     list-style: none;
@@ -181,7 +182,7 @@
 
 .coachSignupContainer .cont .formB .somed li img {
     transform: scale(0.9);
-} */
+} 
 
 @media(max-width:768px) {
     .coachSignupContainer .imgbg {
@@ -228,9 +229,9 @@
 }
 
 
-/* .coachSignupContainer .overlay {
+.coachSignupContainer .overlay {
     width: 100%;
     height: 100%;
     background: rgba(255, 255, 255, 0.8);
     z-index: -100;
-} */
+}
