--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700');
 @import url('https://fonts.googleapis.com/css?family=Catamaran:400,800');
 @import 'components/clinetSignup.css';
+@import 'components/clientInfo.css';
+
 #root {
     /* background-color: lightgray; */
     --main-color: rgb(129, 207, 223);
