--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700');
 @import url('https://fonts.googleapis.com/css?family=Catamaran:400,800');
 #root {
-    background-color: rgba(80, 80, 80, 0.514);
+    background-color: lightgray;
     --main-color: rgb(129, 207, 223);
 }
 
