--- a/src/Login.css
+++ b/src/Login.css
@@ -1,58 +1,62 @@
-*{
+* {
     --main-color: rgb(129, 207, 223);
 }
+
+
 /*#region Login*/
 
+
 /* begin login component */
-section{
+
+.loginSection {
     position: relative;
     width: 100%;
     height: 100vh;
     display: flex;
-
-
 }
-section .imgbg {
+
+.loginSection .imgbg {
     position: relative;
     width: 50%;
     height: 100%;
 }
-section .imgbg::before{
+
+.loginSection .imgbg::before {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(225deg,var(--main-color),#0f4f94);
+    background: linear-gradient(225deg, var(--main-color), #0f4f94);
     z-index: 1;
     mix-blend-mode: screen;
-
 }
-section .imgbg img{
+
+.loginSection .imgbg img {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    
 }
-section .cont{
 
+.loginSection .cont {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 50%;
     height: 100%;
-     /* background-color: white; */
+    /* background-color: white; */
 }
-section .cont .formB{
-    width: 50%;
 
+.loginSection .cont .formB {
+    width: 50%;
 }
-section .cont .formB h2{
-    color:#607d8b ;
+
+.loginSection .cont .formB h2 {
+    color: #607d8b;
     font-weight: 600;
     font-size: 1.5em;
     text-transform: uppercase;
@@ -63,12 +67,11 @@ section .cont .formB h2{
     margin-left: 5px;
 }
 
-section .cont .formB .inputB
-{
+.loginSection .cont .formB .inputB {
     margin-bottom: 20px;
 }
-section .cont .formB .inputB span
-{
+
+.loginSection .cont .formB .inputB span {
     font-size: 20px;
     margin-bottom: 5px;
     display: inline-block;
@@ -77,10 +80,10 @@ section .cont .formB .inputB span
     font-size: 16px;
     letter-spacing: 1px;
 }
-section .cont .formB .inputB input
-{
+
+.loginSection .cont .formB .inputB input {
     width: 100%;
-    padding:10px 20px;
+    padding: 10px 20px;
     outline: none;
     font-weight: 400;
     border: 1px solid #607d8b;
@@ -90,58 +93,54 @@ section .cont .formB .inputB input
     background: transparent;
     border-radius: 30px;
 }
-section .cont .formB .inputB input[type="button"]
-{
-background: #03a9f4;
-color: #fff;
-outline: none;
-border: none;
-font-weight: 500;
-cursor: pointer;
+
+.loginSection .cont .formB .inputB input[type="button"] {
+    background: #03a9f4;
+    color: #fff;
+    outline: none;
+    border: none;
+    font-weight: 500;
+    cursor: pointer;
 }
 
-
-section .cont .formB .inputB input[type="button"]:hover
-{
-    background: #0088c7;  
+.loginSection .cont .formB .inputB input[type="button"]:hover {
+    background: #0088c7;
 }
-section .cont .formB .inputB .remember
-{
+
+.loginSection .cont .formB .inputB .remember {
     margin: 10px;
     color: #607d8b;
     font-weight: 400;
     font-size: 14px;
 }
-section .cont .formB .inputB p
-{
+
+.loginSection .cont .formB .inputB p {
     color: #607d8b;
 }
-section .cont .formB .inputB p *
-{
-    color:var(--main-color);
 
+.loginSection .cont .formB .inputB p * {
+    color: var(--main-color);
 }
 
-section .cont .formB h3{
+.loginSection .cont .formB h3 {
     color: #607d8b;
     text-align: center;
     margin: 80px 0 10px;
     font-weight: 500;
 }
-section .cont .formB .somed
-{
+
+.loginSection .cont .formB .somed {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-section .cont .formB  .somed  li:hover
-{
+
+.loginSection .cont .formB .somed li:hover {
     background: var(--main-color);
-    
     transform: scale(1.5);
 }
-section .cont .formB .somed li
-{
+
+.loginSection .cont .formB .somed li {
     list-style: none;
     width: 50px;
     height: 50px;
@@ -150,67 +149,65 @@ section .cont .formB .somed li
     align-items: center;
     background: #e9eced;
     border-radius: 50%;
-    margin: 0 7px ;
+    margin: 0 7px;
     cursor: pointer;
 }
-section .cont .formB .somed li img
-{
-   transform: scale(0.9);
-   
 
+.loginSection .cont .formB .somed li img {
+    transform: scale(0.9);
 }
 
-@media(max-width:768px)
-{
-   section .imgbg{
-       position: absolute;
-       top:0;
-       left: 0;
-       width: 100%;
-       height: 100%;
-   }
-   section .imgbg img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-   section .cont{
-       display: flex;
-       justify-content: center;
-       align-items: center;
-     top:0;
-     left: 0;
-     z-index: 1;
-
-     width: 100%;
-     height: 100%;
+@media(max-width:768px) {
+    .loginSection .imgbg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
     }
-    section .cont .formB{
-     width: 100%;
-     padding: 40px;
-     background-color:rgba(255,255,255, 0.9);
-     margin: 50px; 
-     box-shadow: 0px 0px 10px 4px rgba(80, 80, 80, 0.43) !important;
-     border-radius: 20px;  
+    .loginSection .imgbg img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
-    section .cont .formB h3 {
+    .loginSection .cont {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        width: 100%;
+        height: 100%;
+    }
+    .loginSection .cont .formB {
+        width: 100%;
+        padding: 40px;
+        background-color: rgba(255, 255, 255, 0.9);
+        margin: 50px;
+        box-shadow: 0px 0px 10px 4px rgba(80, 80, 80, 0.43) !important;
+        border-radius: 20px;
+    }
+    .loginSection .cont .formB h3 {
         color: #607d8b;
         text-align: center;
         margin: 20 px0 10px;
         font-weight: 500;
     }
-
 }
-section .overlay{
+
+.loginSection .overlay {
     width: 100%;
     height: 100%;
-    background: rgba(255,255,255, 0.8);
+    background: rgba(255, 255, 255, 0.8);
     z-index: -100;
 }
 
+
 /* end login component*/
+
 
 /*#endregion Login*/
