--- a/src/components/clinetSignup.css
+++ b/src/components/clinetSignup.css
@@ -1,7 +1,6 @@
-.gender
-{
+.gender {
     width: 200px;
-    padding:10px 20px;
+    padding: 10px 20px;
     outline: none;
     font-weight: 400;
     border: 1px solid #607d8b;
@@ -12,12 +11,12 @@
     border-radius: 30px;
     margin-bottom: 10px;
 }
-.registerError
-{
+
+.registerError {
     color: red;
 }
-.signupForm
-{
+
+.signupForm {
     width: 50%;
     height: 100%;
 }
