--- a/src/components/registeration/register.css
+++ b/src/components/registeration/register.css
@@ -111,6 +111,19 @@
     margin-bottom: 5px;
 }
 
+.coachSignupContainer .cont .formB .inputB textarea {
+    width: 100%;
+    padding: 5px 10px;
+    outline: none;
+    font-weight: 400;
+    border: 1px solid #607d8b;
+    font-size: 16px;
+    letter-spacing: 1px;
+    color: #607d8b;
+    background: transparent;
+    border-radius: 15px;
+}
+
 .coachSignupContainer .cont .formB .inputB input[type="button"] {
     background: #03a9f4;
     color: #fff;
