adding the side bar

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 @import 'components/registeration/register.css';
 @import './components/SignInComponents/Login.css';
 @import 'components/registeration/clientInfo.css';
+@import './components/clientProfile/ClientProfile.css';
 
 /*sokary*/
 
