success making a reusable card component with adding custom attribute styling with wahby

--- a/src/components/clientProfile/ClientProfile.css
+++ b/src/components/clientProfile/ClientProfile.css
@@ -11,6 +11,11 @@
 
 /* #region client card */
 
+.cardd {
+    margin: 20px;
+    background-color: red !important;
+}
+
 .ListOfCoaches-page {
     background-color: aliceblue;
 }
