calender and nutrition changes

--- a/src/components/clientProfile/ClientProfile.css
+++ b/src/components/clientProfile/ClientProfile.css
@@ -109,32 +109,39 @@
     /* max-height: 600px; */
     width: 100%;
 }
-.food
-{
+
+.food {
     display: flex;
     flex-wrap: wrap;
-    
+    justify-content: center;
 }
 
-.meal
-{
+.meal {
     margin: 30px;
     text-align: center;
 }
-.meal h3
-{
+
+.meal h3 {
     text-decoration: underline;
     color: burlywood;
     margin-bottom: 40px;
-  
-}
-.meal img
-{
-    border-radius: 60%;
-    margin-bottom: 20px;
-    width:'220px'
 }
 
+.meal img {
+    border-radius: 60%;
+    margin-bottom: 20px;
+    width: '220px'
+}
 
 
 /* #endregion workout card */
+
+.site-calendar-demo-card {
+    width: 300px;
+    border: 1px solid #f0f0f0;
+    border-radius: 2px;
+}
+
+.workout-text-div {
+    width: 50%
+}
